<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddDate"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_date"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGameCenter"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_center"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddCard"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_card"
        android:textColor="@color/white" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddPartner"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_partner"
        android:textColor="@color/white"
        android:layout_marginTop="12dp" />
</LinearLayout>