<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="6dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you"
            android:contentDescription="@string/you"
            android:textStyle="bold"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btnColorPicker"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_palette"
            android:contentDescription="@string/change_color" />

        <TextView
            android:id="@+id/tvEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOwnerName"
            android:text="@string/movie_night"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventTitle"
            android:layout_marginTop="4dp"
            android:text="@string/cinema_dinner_after"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEventDescription"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:text="@string/_17_30"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>