<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/romantic_gradient_bg">

    <TextView
        android:id="@+id/txtCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/txtCard"
        android:text="@string/tap_draw"
        android:textSize="26sp"
        android:padding="24dp"
        android:gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDraw"
        android:text="@string/draw_card"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>