<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootResult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="@drawable/retro_bg">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0.65" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvCoinsEarned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/coins_0"
        android:textSize="18sp"
        android:textColor="@color/white" />
    
    <LinearLayout
        android:id="@+id/boxHighScores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:background="@drawable/game_over_panel">
        
        <TextView
            android:id="@+id/tvPartnerHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/partners_high_score"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvYourHighScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/my_high_score"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnResultDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/back_to_games"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/game_over_panel"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>